--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 name = "svelte-bun"
 pages_build_output_dir = "./dist"
-compatibility_flags = ["nodejs_compat"]
+compatibility_flags = ["nodejs_compat_populate_process_env"]
 compatibility_date = "2024-01-01"
